# RoleEngine

./: .gitignore  README.md  main.py  pyproject.toml
code/: core.py  display.py  input.py  main.py  objects.py  role_core.py
mglw_code/: SETTINGS.py  modernGL_Funcs.py
scripts/: display.py  input.py  objects.py  role_core.py
